--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "clsx": "^2.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-router-dom": "^7.9.3",
     "recharts": "^2.8.0"
   },
   "devDependencies": {
